k8s/services/jenkins/base/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/jenkins`)
      kind: Rule
      priority: 1000
      services:
      - name: jenkins-operator-http-master
        port: 8080
      middlewares:
      - name: basic-auth
        namespace: services
  # Use the secret generated by the Traefik's tlsstore
  tls: {}
#    secretName: snwbr-net-tls
